[package]
edition = "2018"
name = "httpie"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1" # 错误处理
clap = "3.0.0-beta.4" #命令行解析
colored = "2.0.0" # 命令行终端多彩显示
jsonxf = "1.1.1" # JSON pretty print 格式化
mime = "0.3.16" # 处理 mime 类型
reqwest = {version = "0.11", features = ["json"]}# HTTP 客户端  
tokio = {version = "1", features = ["full"]}# 异步处理库
